--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@ p {
   overflow: hidden;
   min-height: 100vh;
   width: 100vw;
-  background-image: url('../images/cockpit.jpg');
+  background-image: url('../images/cockpit.JPG');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -594,7 +594,7 @@ h9 {
   min-height: 100vh;
   width: 100vw;
   background-color: #000;
-  /*background-image: url('../images/team_car.JPG');*/
+  background-image: url('../images/Potrait.JPG');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
