--- a/css/style.css
+++ b/css/style.css
@@ -477,7 +477,7 @@ h9 {
   overflow: hidden;
   min-height: 100vh;
   width: 100vw;
-  background-image: url('../images/fb_event.jpg');
+  background-image: url('../images/fb_event.JPG');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
